スタイル調整

--- a/base.html
+++ b/base.html
@@ -55,6 +55,13 @@
           -o-transition: -o-transform 1s ease-in-out;
         }
 
+        p {
+            margin-top: 0.3em;
+        }
+        strong {
+            color: red;
+        }
+
         div.slide {
           display: none;
           position: absolute;
@@ -149,11 +156,11 @@
           color: black;
           font-size: 36px;
           padding: 0;
-          margin: 15px 0px 5px 0px;
+          margin: 30px 0px 0px 0px;
         }
 
         h2:first-child {
-          margin-top: 0;
+          margin-top: 20px;
         }
 
         section, .slide header:only-child h1 {
