s/Coment/Comet/gc

--- a/index.html
+++ b/index.html
@@ -1205,7 +1205,7 @@ OSのスケジューラが十分良いので、むしろオーバーヘッドの
                 
                   <section><ul>
 <li>WebSocket対応</li>
-<li>Coment (long polling) 対応</li>
+<li>Comet (long polling) 対応</li>
 <li>Streaming API 対応</li>
 <li>その他、アプリの機能の一部として大量接続が必要になるケース.</li>
 </ul>
