構成の調整.

--- a/base.html
+++ b/base.html
@@ -105,6 +105,19 @@
           font-size: 32px;
         }
 
+        div.slide table {
+          text-align: right;
+          font-size: 36px;
+          padding: 30px;
+          padding-left: 100px;
+        }
+        td, th {
+          padding: 10px;
+        }
+        th {
+          padding-left: 50px;
+        }
+
         .slide.far-past {
           display: block;
           margin-left: -2400px;
@@ -193,11 +206,12 @@
         pre {
           font-size: 18px;
           font-family: Monaco, Courier, monospace;
-          margin: 5px 0px 0px 10px;
+          margin: 15px 0px 0px 10px;
         }
 
         ul {
             margin: 5px;
+            margin-top: 10px;
         }
         li {
           padding: 10px 0;
