--- a/en.html
+++ b/en.html
@@ -984,7 +984,7 @@ So Motor (gevent like system) is developed.</p>
               <header><h1>Gevent vs Tornado</h1></header>
               
                 
-                  <section><p>Torando, Twisted, node.js is good for event driven programming framework.</p>
+                  <section><p>Torando, Twisted, node.js is good event driven programming framework.</p>
 <p><br/>
 Gevent allows <strong>standard programming style<br>and using existing libraries.</strong></p>
 </section>
